@@ -1,5 +1,7 @@
 *Mon Jan 11 2010 Henri Gavin <henri.gavin@duke.edu> 0.20100105
 - improve parsing data format for internal element forces and displacements
+- separate deformed mesh and undeformed mesh data files
+- shorten loops for writing mesh data files
 - update user-manual.html
 - plotting of internal forces in Gnuplot is the next step (?)
 
